URLコンストラクタ非推奨対応